--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ SpeechRecognition==3.10.0
 gTTS==2.3.2
 PyPDF2==3.0.1
 python-docx==0.8.11
+python-dotenv==1.0.0  # Add for local environment variable handling
