--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ gTTS==2.3.2
 PyPDF2==3.0.1
 python-docx==0.8.11
 python-dotenv==1.0.0  # Add for local environment variable handling
+chardet==5.2.0
+pydub==0.25.1
+gevent==23.9.1
