--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ python-dotenv==1.0.0  # Add for local environment variable handling
 chardet==5.2.0
 pydub==0.25.1
 gevent==23.9.1
+openai-whisper==20240930
